update serverless api def

--- a/serverless.yml
+++ b/serverless.yml
@@ -23,7 +23,7 @@ functions:
     events:
       - http:
           path: friend
-          method: get
+          method: post
           cors: true
 
 resources:
